codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_uses_default_reasoning_when_config_empty.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

  >_ OpenAI Codex (v0.0.0)

  Visit https://chatgpt.com/settings/usage for up-to-date
  information on rate limits and credits

  Model:            gpt-5.1-codex-max (reasoning medium, summaries auto)
  Directory:        [[workspace]]
  Permissions:      Custom (workspace with network access, Ask for approval)
  Agents.md:        <none>

  Token usage:      750 total  (500 input + 250 output)
  Context window:   100% left (750 used / 272K)
  Shake watermark:  unavailable
  Limits:           data not available yet
